directivty versus gain, various edits

--- a/emi/emi_refs.bib
+++ b/emi/emi_refs.bib
@@ -49,6 +49,10 @@
   note = {\url{http://www.sm5bsz.com/linuxdsp/linrad.htm}}
 }
 
+@misc{sm5bsz_blanker,
+  title = {{Noise Blankers}},
+  note = {\url{http://www.sm5bsz.com/blanker.html}}
+}
 @misc{linrad_phasing,
   title = {{Linrad, two channel reception,
 noise cancelling, antennas phasing}},
@@ -65,6 +69,10 @@ noise cancelling, antennas phasing}},
   note = {\url{https://www.w8ji.com/noise.htm}}
 }
 
+@misc{w8ji_directivity,
+  title = {{Radio Noise}},
+  note = {\url{https://www.w8ji.com/receiving_basics.htm}}
+}
 @misc{vu2nsb_s_meter,
   title = {{Interpretation of S-Meter Noise Floor in HF Radio Receivers }},
   note = {\url{https://vu2nsb.com/s-meter-noise-floor-hf-receivers/}}
