--- a/emi/emi.tex
+++ b/emi/emi.tex
@@ -29,7 +29,7 @@ What I've learnt about characterising and removing noise:
 \begin{enumerate}
 \item S-meters can't be trusted \cite{vu2nsb_s_meter}, you'll need a calibrated way to measure noise power at your site.
 \item Measure your ambient noise figure $F_a$ and compare to P.372 \cite{itu372-16}.
-\item If your noise is AWGN and your $F_a$ is similar to P.372 it's probably city wide noise, rather than something local. Congratulations you are doing as well as can be reasonably expected. Your options are a directional antenna, or moving your antenna to the country.
+\item If your noise is AWGN and your $F_a$ is similar to P.372 it's probably city wide noise, rather than something local. Congratulations you are doing as well as can be reasonably expected. Your options are a directional (receive) antenna, or moving your antenna to the country.
 \item If you see harmonics on your waterfall (and hear tones as your tune across the band) it's PWM and likely very local.
 \item If it's rapid clicks or buzzing it's impulse noise which is also local, but can travel down power lines around suburbs. 
 \item To address PWM and impulse local noise, position your antenna at least 6m from any buildings, power and phone lines.  Look for and address any common modem feedline issues, use a balun on your dipole, or use antennas with good balance (like loops).  Try Diversity.  Your noise blanker might work for impulse noise.  A small loop antenna might help as it is easier to place away from noise sources than a wire antenna.
@@ -55,18 +55,22 @@ Table \ref{table:noise_classes} is how I classify noise.  Like many taxonomies, 
 
 The maths and analysis of experimental data has these take aways:
 \begin{enumerate}
-\item Both the noise and noise blankers can be expressed as Fourier series.
-\item PWM harmonics are baseband PSK, AM modulated onto carriers at the centre of each harmonic.  By thinking of the noise as signals we can get insight into possible attacks.
+\item Both the noise and noise blankers can be expressed as a Fourier series.
+\item PWM harmonics are PSk signals, AM modulated onto carriers at the centre of each harmonic.  By thinking of the noise as signals with structure we can get insight into possible attacks.
 \item PWM noise is localised to harmonic centres at lower frequencies, then gets wider with increasing frequency.
-\item The signal processing bandwidth where the blanker runs matters.  As the bandwidth is reduced the noise pulses are smeared together.
+\item The signal processing bandwidth where the blanker runs matters \cite{sm5bsz_blanker}.  As the bandwidth is reduced the noise pulses are smeared together.
 \item Blankers don't attenuate the wanted signal much, but do introduce intermodulation.  Blankers are likely to be more effective with digital than analog modes.
+\item A blanker running in a wide bandwidth may be useful for reducing the impact of PWM noise.
 \item Diversity only works when the noise is effectively a point source.
+\item In an urban location, your ability to establish a link with a station at a quiet location will be limited by the ambient noise your receiver detects more than than your transmitter EIRP.  Consider combining a very low gain (e.g. -30dB) receive antenna with directivity (small loop with a rotator, loop on ground, array of small antennas) combined with a simple transmit antenna such as a dipole.
 \item Impulse noise can be really complex, confusing narrow band noise blankers.
-\item Impulses make the antenna system ring. It may be possible to indentify and remove this ringing.
-\item A limiter might be useful for digital modes.
+\item Impulses make the antenna system ring. It may be possible to identify and remove this ringing.
+\item A limiter and detector running in a wide processing bandwidth might be useful for digital modes.
 \end{enumerate}
 
 \subsection{Selected References}
+
+This field is highly subjective, I have found it difficult to find hard data, repeatable experiments and good quality references.
 
 References I recommend are ITUT-R P372 \cite{itu372-16}, the W8JI web site \cite{w8ji_radio_noise} for a concise overview of HF noise and small loop antenna myths; and the web site of LZ1AQ \cite{lz1aq} for his studies on small loop antenna arrays. After some experimentation \cite{rowetel_noise_city} I've settled on the approach suggested by Owen Duffy \cite{duffy_lig} and Basu \cite{vu2nsb_s_meter} - comparing my ambient noise floor to P.372 to check my baseline, then seeing what I can do about local noise sources. John Fallows VE6EY \cite{ve6ey} has some fine material on noise reduction using diversity receivers on his blog and YouTube channel.
 
@@ -201,7 +205,7 @@ This expression is similar to the Fourier Series for a pulse train (\ref{eq_pwm}
 
 Given $d$ is small, and there is still significant power at high harmonic numbers, $A$ must be very large for these impulse noise sources.
 
-\subsection{Attacks}
+\subsection{PWM Attacks}
 
 \begin{enumerate}
 \item Estimation and subtraction of the signals. Key take away is mirror of $d(t)$ about harmonic centre.  We could use estimation of the signal from one sideband to cancel other sideband. This will be problematic when it's spread so far that we get energy from $n+1$, $n-1$ near harmonic $n$.  However in that case it may not be as annoying/strong.
@@ -304,7 +308,7 @@ Y(w) &= a_1 (1-d) \delta(\omega - \omega_1) - a_1 d H(\omega-\omega_1) \\
 \label{blanker_discussion}
 
 \begin{enumerate}
-\item The wanted signal has been reduced to $(1-d)$, and harmonics $H(\omega)$ have been introduced either side.  These are spectral copies of the input signal, spaced every $\alpha$ radians/s.
+\item The wanted signal amplitude has been reduced to $(1-d)$, and harmonics $H(\omega)$ have been introduced either side.  These are spectral copies of the input signal, spaced every $\alpha$ radians/s.
 \item An attenuation of $(1-d)$ is quite modest, for example if half of the signal is blanked ($d=0.5$), we lose just 3dB of the wanted signal power.  So quite heavy blanking is feasible, if it improves the output SNR by removing the noise pulse.
 \item The harmonic levels are proportional to the duty cycle $d$.  As our blanking pulse becomes longer relative to the noise period, we will experience more blanking noise.
 \item If the harmonic levels approach $a_1$ they may cause interference.  However for digital waveforms a margin of only a few dB beneath the wanted signal would be acceptable.  This suggests digital waveforms can benefit more from noise blanking than analog. 
@@ -360,9 +364,9 @@ When suppressing far field EMI signals amplitude will be less sensitive to anten
 
 \subsection{Directional Antennas}
 
-Consider a isotropic antenna that receives power equally from all directions.  The gain pattern can be visualised as a sphere of constant radius, with a solid angle of $4 \pi$ steradians. Now consider an ideal directional antenna with a cone shaped pattern that receives all it's power from a solid angle of $\theta$ steradians, and no power from any other angle.  It's power gain is $G=\frac{4 \pi}{\theta}$. 
+Consider a 100\% efficient isotropic antenna that receives power equally from all directions.  The gain pattern can be visualised as a sphere of constant radius, with a solid angle of $4 \pi$ steradians. Now consider an ideal directional antenna with a cone shaped pattern that receives all it's power from a solid angle of $\theta$ steradians, and no power from any other angle.  It's power gain is $G=\frac{4 \pi}{\theta}$. 
 
-If the EMI is the sum of many sources it is likely to have equal power flux density in all directions.  Consider an isotropic antenna placed at the centre of this field. If the total noise power received from an isotropic antenna is $N$ watts, the noise power in a solid angle of $\theta$ radians is $N \frac{\theta}{4 \pi}$ Watts, and the noise power at the directional antenna terminals is:
+If the EMI is the sum of many sources it is likely to have equal power flux density in all directions.  Consider an isotropic antenna placed at the centre of this field. If the total noise power received from an isotropic antenna is $N$ watts, the noise power in a solid angle of $\theta$ radians is $N \frac{\theta}{4 \pi}$ Watts, so the noise power at the directional antenna terminals is:
 \begin{equation}
 \begin{split}
  P &= N \frac{\theta}{4 \pi} G \\
@@ -370,21 +374,23 @@ If the EMI is the sum of many sources it is likely to have equal power flux dens
    &= N
 \end{split}
 \end{equation}
-Thus the noise power received by a directional antenna is the same as an isotropic antenna and the same in any direction. In contrast our far field wanted signal is a point source. If that signal develops a power of $S$ watts into an isotropic antenna, it will develop a power of $GS$ watts at the terminals of our directional antenna. The S/N improvement using a directional antenna in a uniform EMI field is therefore improved by the antenna gain $G$.
+Thus the noise power received by a directional antenna is the same as an isotropic antenna and the same in any direction. In contrast our far field wanted signal is a point source. If that signal develops a power of $S$ watts into an isotropic antenna, it will develop a power of $GS$ watts at the terminals of our directional antenna. The S/N improvement using a directional antenna in a uniform EMI field is therefore improved by the antenna gain $G$.  
+
+For lower HF where external (ambient) noise dominates, antenna pattern and directivity \cite{w8ji_directivity} is a better way model SNR improvements than gain.  Directivity is the ratio of power received from our wanted direction compared to power from all other directions. Merely improving gain (without changing directivity) will not improve SNR in the presence of isotropic noise.  It also implies low gain (but directional) antennas such as arrays of small dipoles or loops, can improve received SNR in presence of noise.
 
 If the EMI is a point source, we may be able to place it in a pattern null using a directional antenna or diversity/beamforming techniques, further improving the effectiveness of the attack.
 
-\subsection{Topologies}
+\subsection{Topology}
 
 Antenna topologies may help reduce near field coupling.  For example the conductors of physically small loops and dipoles can be placed further away from near field sources compared to a full length dipole that must extend across the entire width of an urban block \cite{lz1aq}.
 
-There is some experimental evidence that the loop in/on ground topology \cite{k5jy_log}\cite{duffy_lig} increases SNR in suburban locations compared to traditional antennas such as dipoles.  The low gain (e.g. -30 dB) is usable for Rx operation as noise external to the receiver generally dominates system noise figure at HF. So both signal and noise is reduced, and S/N remains the same. It is a balanced design, and the use of common mode chokes on either end of the feedline is recommended.
+There are many subjective reports that small loop antennas (either tuned or untuned) provide significant reductions in EMI, by virtue of lower sensitivity to near electric fields.  However loop antennas are not magic \cite{w8ji_radio_noise}, and perform worse than dipoles in the presence of strong magnetic fields and even at certain distances from electric fields.  Their principle benefit appears to be small overall dimensions, making them easier to position away from near fields radiating from homes and power lines. The ability to null point noise sources is also useful, in installations with a rotator.
 
-How this antenna reduces EMI (as implied by the improved SNR) is unclear, but worthy of further investigation. It is possible that compared to a reference dipole, near field noise is reduced as it is attenuated more than desired far field signals by the low (or subterranean) placement of the antenna.  It has some directivity, and a balanced design which is useful in rejecting common mode feedline currents.  It's low placement may also increase physical distance to near field signals such as overhead power lines and nearby houses. 
+There are subjective reports from the on-line community that a loop antenna placed in or even under the ground \cite{k5jy_log}\cite{duffy_lig} performs favourably in suburban locations compared to traditional antennas such as dipoles. It is a balanced design, and the use of common mode chokes on either end of the feedline is recommended. The low gain (e.g. -30 dB) is usable for Rx operation as noise external to the receiver generally dominates system noise figure at HF. So both signal and noise is reduced, and S/N remains the same.
 
-There are many subjective reports that small loop antennas (either tuned or untuned) provide significant reductions in EMI, by virtue of lower sensitivity to near electric fields.  However loop antennas are not magic \cite{w8ji_radio_noise}, and perform worse than dipoles in the presence of strong magnetic fields and even at certain distances from electric fields.  Their principle benefit appears to be small overall dimensions, making them easier to position away from near fields radiating from homes and power lines.
+How this antenna reduces the effects of EMI (as implied by the improved SNR) is unclear, but worthy of further investigation. It is possible that compared to a reference dipole, near field noise is reduced as it is attenuated more than desired far field signals by the low (or subterranean) placement of the antenna.  It's directivity may help, by attenuating isotropic far field noise and hence increasing SNR is certain directions (e.g. 90 degrees elevation, for NVIS applications).  It's low placement and novel use of urban grassed areas may also increase physical distance to near field signals such as overhead power lines and nearby houses.
 
-It seems likely that antenna topology alone cannot distinguish far field EMI (such as AWGN noise that is the sum of many noise sources in a city) from wanted signals.
+It seems likely that in the absence of significant directivity, antenna topology alone cannot distinguish far field EMI (such as AWGN noise that is the sum of many noise sources in a city) from wanted signals.
 
 \section{Experimental Measurements 1}
 
@@ -482,7 +488,7 @@ The S units are not sensitive to filter bandwidth, e.g. for a 3000Hz bandwidth $
 \subsection{Discussion}
 
 \begin{enumerate}
-\item The IC7300 S-meter was found to be uncalibrated \cite{vu2nsb_s_meter} (6dB power change not equal to one S unit) and could not be relied upon to measure noise power.  Instead, the S-units in Table \ref{table:measurement_clusters} where calulcated using equation (\ref{eq:s_unit}). However the IC7300 waterfall is quite useful as a single plot shows both $R<B$ impulse noise (lines across all frequencies) and $R>B$ PWM (harmonics spaced at $R$ Hz).
+\item The IC7300 S-meter was found to be uncalibrated \cite{vu2nsb_s_meter} (6dB power change not equal to one S unit) and could not be relied upon to measure noise power.  Instead, the S-units in Table \ref{table:measurement_clusters} where calculated using equation (\ref{eq:s_unit}). However the IC7300 waterfall is quite useful as a single plot shows both $R<B$ impulse noise (lines across all frequencies) and $R>B$ PWM (harmonics spaced at $R$ Hz).
 \item The site has strong 50 Hz impulse noise however the IC7300 noise blanker removes this quite effectively, especially on 7.1 MHz.  The zero span feature of the spec-an (set to 100ms sweep time) is useful for observing these short impulses - it turns the spec-an into a tuned oscilloscope with adjustable centre frequency and bandwidth.  A sweep time of 100ms and resolution bandwidth of 30 kHz was useful for observing 10ms period pulses typical of 50 Hz impulses (one per edge).
 \item Noise A/B appeared to be mainly AWGN, although at times PWM harmonics could be observed on both bands. The presence of the harmonics had no affect on the observed noise power between the harmonics, which suggests a small modulation index $h$.
 \item The 14.2 high level noise C corresponded to wideband noise with quite wide harmonics about 30kHz apart just visible on the waterfall.  From our PWM analysis in Section \ref{pwm}, this suggests $R>B$ with a fairly high modulation index $h$.  The time varying power between B and C could be due to shifts in the mean PWM duty cycle $d$, leading to shifts in the $sin(\pi n d)$ Fourier coefficients across the observed band.  Given $n$ is so high, even small shifts in $d$ can cause large changes in the amplitudes of the Fourier components.
@@ -502,8 +508,8 @@ An experiment was conducted where the signal from one antenna was split, and fed
 \subsection{Conclusions}
 
 \begin{enumerate}
-\item Noise A \& B are close to P.372, AWGN in nature, and cannot be reduced further with diversity.  This suggests far field noise from the surrounding city (many sources, many directions), which means I'm doing as well as expected (perhaps a little better than the median at 14.2 MHz).  Turns out I'm normal after all!  Experimentation with antennas is one of the few options to improve the SNR of signals I receive at my site. 
-\item Noise C on 14.2 MHz look like time varying local PWM noise, and needs further investigation.
+\item Noise A \& B are close to P.372, AWGN, and cannot be reduced further with diversity.  This suggests far field noise from the surrounding city (many sources, many directions), which means I'm doing as well as expected (perhaps a little better than the median at 14.2 MHz).  Turns out I'm normal after all!  Experimentation with antennas is one of the few options to improve the SNR of signals I receive at my site. 
+\item Noise C on 14.2 MHz looks like time varying local PWM noise, and needs further investigation.
 \end{enumerate}
 
 \section{Experimental Measurements 2}
@@ -522,7 +528,7 @@ I'm not nerdy enough to leave it set up in the middle of the front yard, so sett
 \end{center}
 \end{figure}
 
-When receiving off air signals, the Wellbrook performs roughly the same as the dipole on 40m and 20m.  Sometimes one sounds better, sometimes the other, as would be expected from different patterns and polarisation.  Listening tests are confused by the different gain of the antennas, the dipole is "louder" (both signal and noise increase) than the Wellbrook on 40m, and the opposite on 20m.  So when I flip the antenna switch, the noise I hear leaps up or down while the AGC adjusts.
+When receiving off air signals, the subjective SNR from the Wellbrook is roughly the same as the dipole on 40m and 20m.  Sometimes one sounds better, sometimes the other, as would be expected from different patterns and polarisation.  Listening tests are confused by the different levels from the antennas, the dipole is "louder" (both signal and noise increase) than the Wellbrook on 40m, and the opposite on 20m.  So when I flip the antenna switch, the signal and noise I hear leaps up or down while the AGC adjusts.
 
 \subsection{Observations}
 
@@ -628,13 +634,13 @@ Figure \ref{fig:D_wellbrook_5ms} is noise D received on the Wellbrook. Note the 
 
 Urban noise problems are complex, I have identified 4 noise sources around my home so far.
 
-The relatively close spacing of the noise D impulses (200$\mu$s apart over several ms) might explain why the noise blanker is struggling.  The blanker signal processing is likely operating at a bandwidth such that consecutive pulses are smeared together, so the blanker would be forced to blank about 5ms out of every 20ms. From our noise blanker analysis in Section \ref{blanker_discussion} the blanker noise products are duty cycle $d$ lower than the wanted signal, or $10log10(5/20)=-6$ dB lower in power than the wanted signal.  We would expect this to be quite obvious on SSB signals.  However a signal/interferer ratio of 6dB wouldn't bother many digital modes.
+The relatively close spacing of the noise D impulses (200$\mu$s apart over several ms) might explain why the noise blanker is struggling \cite{sm5bsz_blanker}.  The blanker signal processing is likely operating at a bandwidth such that consecutive pulses are smeared together, so the blanker would be forced to blank about 5ms out of every 20ms. From our noise blanker analysis in Section \ref{blanker_discussion} the blanker noise products are duty cycle $d$ lower than the wanted signal, or $10log10(5/20)=-6$ dB lower in power than the wanted signal.  We would expect this to be quite obvious on SSB signals.  However a signal/interferer ratio of 6dB wouldn't bother many digital modes.
 
-A wideband noise blanker that can blank a few $\mu$s every 200 $\mu$s would be more effective, but would require a wider DSP bandwidth.  It also risks intermodulation interference from strong signals.  This is an interesting area for further work.  Diversity might help with Noise D as it is present in both antennas, indeed it's strength and 50Hz period suggests a suburban source propagated by electricity lines.
+A wideband noise blanker that can blank a few $\mu$s every 200 $\mu$s would be more effective, but would require a wider DSP bandwidth.  It also risks intermodulation interference from strong signals.  This is an interesting area for further work.  Diversity might help with Noise D as it is present in both antennas, indeed it's strength and 50Hz period suggests a suburban source propagated by electricity lines.  Perhaps a heat pump being run in the morning for a few hours.
 
-The period of noise D is approximately the same as one PSK symbol at HF.  For the demodulation of constant envelope digital signals like (Q)PSK and FSK, these impulses could be removed by limiting.  However in the common scenario of a SSB receiver followed by DSP operating at audio bandwidths, low duty cycle noise pulses would be smeared in time, reduced in amplitude and difficult to remove.  This suggests a PSK demodulator operating at a high sample rate, coupled with limiting, would be worth exploring.
+The period of noise D is approximately the same as one PSK symbol at HF.  For the demodulation of constant envelope digital signals like (Q)PSK and FSK, these impulses could be removed by limiting.  However in the common scenario of a SSB receiver followed by DSP operating at audio bandwidths, short ($d<<B$) noise pulses would be smeared in time, reduced in amplitude and difficult to remove.  This suggests a PSK demodulator operating on a bandwidth of several hundred kHz (rather than a few kHz from a SSB receiver), coupled with limiting, would be worth exploring.
 
-The ringing of the antenna system in response to an impulse suggests several attacks. We could train a system to recognise the impulse response of the antenna system to identify and remove noise impulses.  If the impulse response is known, we could inverse filter to produce very short (non smeared) noise impulses that are easy to blank.
+The ringing of the antenna system in response to a noise impulse suggests several attacks. We could train a system to recognise the impulse response of the antenna system to identify and remove noise impulses.  If the impulse response is known, we could inverse filter to produce very short (non smeared) noise impulses that are easy to blank.
 
 \bibliographystyle{plain}
 \bibliography{emi_refs}
