--- a/emi/emi_refs.bib
+++ b/emi/emi_refs.bib
@@ -89,3 +89,10 @@ noise cancelling, antennas phasing}},
 }
 
 
+@misc{dj0ip_s_meter,
+  title = {{DJ0IP - Sherwood Sound Bytes}},
+  note = {\url{https://www.dj0ip.de/app/download/5807605140/SSB-06+S-Meter+Accuracy.pdf}}
+}
+
+
+
